--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://hac2web:jvMb6ldTFWxDocGp@cluster0.6jebv.mongodb.net/Tourify?retryWrites=true&w=majority
+MONGO_API_URL=mongodb+srv://hac2web:jvMb6ldTFWxDocGp@cluster0.6jebv.mongodb.net/Sentify?retryWrites=true&w=majority
+PORT=5000
