--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,17 @@
 MONGO_API_URL=mongodb+srv://hac2web:jvMb6ldTFWxDocGp@cluster0.6jebv.mongodb.net/Sentify?retryWrites=true&w=majority
 PORT=5000
+
+# Reddit API Credentials
+REDDIT_CLIENT_ID='dh-pJ2g7bmp5H55tgsth3w'
+REDDIT_CLIENT_SECRET='L2tiTgDrdwwb9DWtrX19CdbZqYAGsg'
+REDDIT_USER_AGENT='AI-lluminati'
+
+# NewsAPI Key
+NEWS_API_KEY='bc6a8428bd6143798ea88348297f44ec'
+
+# Flask Configuration
+FLASK_ENV=development  # Change to "production" when deploying
+FLASK_APP=app.py       # Entry point for your Flask app
+
+# Other Configurations (Optional)
+DEBUG=True  # Set to False in production
