--- a/frontend_sentify/package.json
+++ b/frontend_sentify/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
