--- a/backend/.env
+++ b/backend/.env
@@ -9,9 +9,9 @@ REDDIT_USER_AGENT='AI-lluminati'
 # NewsAPI Key
 NEWS_API_KEY='bc6a8428bd6143798ea88348297f44ec'
 
-# Flask Configuration
-FLASK_ENV=development  # Change to "production" when deploying
-FLASK_APP=app.py       # Entry point for your Flask app
+# # Flask Configuration
+# FLASK_ENV=development  # Change to "production" when deploying
+# FLASK_APP=app.py       # Entry point for your Flask app
 
-# Other Configurations (Optional)
-DEBUG=True  # Set to False in production
+# # Other Configurations (Optional)
+# DEBUG=True  # Set to False in production
