integrated ml model to the website

--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,8 @@ REDDIT_CLIENT_SECRET='L2tiTgDrdwwb9DWtrX19CdbZqYAGsg'
 REDDIT_USER_AGENT='AI-lluminati'
 
 # NewsAPI Key
-NEWS_API_KEY='bc6a8428bd6143798ea88348297f44ec'
+NEWS_API_KEY='8e10112cdfa244589e4bf1a5828b7d9a'
+GEMINI_API_KEY='AIzaSyDVU6y2yc2di3n88zrNSt0USNErvnJ1STE'
 
 # # Flask Configuration
 # FLASK_ENV=development  # Change to "production" when deploying
